README.md adicionado

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "electron ."
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
-    "url": "\u0016https://github.com/eduardomantz291/DevNavigator.git"
+    "url": "https://github.com/eduardomantz291/DevNavigator.git"
   },
   "author": "Eduardo Mantz",
   "license": "MIT"
